# simple_rust_decision_tree

./: Cargo.toml  readme.md
src/: main.rs
