[package]
name = "rust_dt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa-datasets = { version = "0.x", features = ["iris", "winequality"] }
linfa = "0.7.0"
linfa-trees = "0.7.0"
ndarray-rand = "0.14.0"
rand = "0.8.5"
ndarray = "0.15.6"
ordered-float = "4.1.1"
